# driving-license-kata-v2

./: pyproject.toml
driving_license_kata/: driving_license.py
tests/: test_driving_license_generator.py
