[tool.poetry]
name = "driving-license-kata-v2"
version = "0.1.0"
description = ""
authors = ["Marie <66479073+ndowkunda@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "driving_license_kata_v2"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
